--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -105,15 +105,18 @@
 	<div id="fh5co-services" class="fh5co-bg-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 col-sm-4 text-center">
+				<div class="col-12 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-credit-card"></i>
 						</span>
-						<h3>Credit Card</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+						<h3>Your Cart</h3>
+						<p>This are your items...</p>
+						<div class="container">
+							
+						</div>
 					</div>
+
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
